objects/Payment__c.object
<CustomObject>
    <description>This Object will hold all the payments done by the patient</description>
    <fields>
        <fullName>Patient__c</fullName>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>payment_for__c</fullName>
        <label>payment for</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Payment</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Payment Receipt</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>